--- a/dependencies.yaml
+++ b/dependencies.yaml
@@ -138,6 +138,7 @@ files:
       - depends_on_dask_cudf
       - depends_on_pylibcudf
       - depends_on_libcudf
+      - depends_on_cudf_polars
       - docs
       - py_version
   py_build_cudf:
