--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -351,7 +351,8 @@ jobs:
     if: fromJSON(needs.changed-files.outputs.changed_file_groups).test_python || fromJSON(needs.changed-files.outputs.changed_file_groups).test_cudf_pandas
     with:
       # This selects "ARCH=amd64 + the oldest supported Python + latest supported CUDA".
-      matrix_filter: map(select(.ARCH == "amd64")) | max_by(.CUDA_VER|split(".")|map(tonumber)) | min_by(.PY_VER|split(".")|map(tonumber))
+      matrix_filter: '[{"ARCH": "amd64", "PY_VER": "3.13", "CUDA_VER": "12.9.1", "LINUX_VER": "ubuntu24.04", "GPU": "l4", "DRIVER": "latest", "DEPENDENCIES": "newest"}]'
+      #matrix_filter: map(select(.ARCH == "amd64")) | max_by(.CUDA_VER|split(".")|map(tonumber)) | min_by(.PY_VER|split(".")|map(tonumber))
       build_type: pull-request
       script: ci/cudf_pandas_scripts/pandas-tests/run.sh pr
       # Hide test failures because they exceed the GITHUB_STEP_SUMMARY output limit.
