--- a/.github/workflows/pandas-tests.yaml
+++ b/.github/workflows/pandas-tests.yaml
@@ -24,8 +24,7 @@ jobs:
       secrets: inherit
       uses: rapidsai/shared-workflows/.github/workflows/wheels-test.yaml@branch-25.08
       with:
-        # This selects "ARCH=amd64 + the oldest supported Python + latest supported CUDA".
-        matrix_filter: map(select(.ARCH == "amd64")) | max_by(.CUDA_VER|split(".")|map(tonumber)) | min_by(.PY_VER|split(".")|map(tonumber))
+        matrix_filter: '[{"ARCH": "amd64", "PY_VER": "3.13", "CUDA_VER": "12.9.1", "LINUX_VER": "ubuntu24.04", "GPU": "l4", "DRIVER": "latest", "DEPENDENCIES": "newest"}]'
         build_type: nightly
         branch: ${{ inputs.branch }}
         date: ${{ inputs.date }}
