--- a/python/cudf/pyproject.toml
+++ b/python/cudf/pyproject.toml
@@ -109,7 +109,8 @@ filterwarnings = [
     "ignore:FNV hashing is not implemented in Numba.*:UserWarning"
 ]
 markers = [
-    "spilling: mark benchmark a good candidate to run with `CUDF_SPILL=ON`"
+    "spilling: mark benchmark a good candidate to run with `CUDF_SPILL=ON`",
+    "serial: Mark a test as not being parallel-safe.",
 ]
 xfail_strict = true
 
