--- a/.github/workflows/pr.yaml
+++ b/.github/workflows/pr.yaml
@@ -85,6 +85,7 @@ jobs:
           - '!python/**'
         test_cudf_pandas:
           - '**'
+          - '!.clang-format'
           - '!.devcontainer/**'
           - '!CONTRIBUTING.md'
           - '!README.md'
@@ -95,6 +96,7 @@ jobs:
           - '!notebooks/**'
         test_java:
           - '**'
+          - '!.clang-format'
           - '!.devcontainer/**'
           - '!CONTRIBUTING.md'
           - '!README.md'
@@ -106,6 +108,7 @@ jobs:
           - '!python/**'
         test_notebooks:
           - '**'
+          - '!.clang-format'
           - '!.devcontainer/**'
           - '!CONTRIBUTING.md'
           - '!README.md'
@@ -114,6 +117,7 @@ jobs:
           - '!java/**'
         test_python:
           - '**'
+          - '!.clang-format'
           - '!.devcontainer/**'
           - '!CONTRIBUTING.md'
           - '!README.md'
