--- a/python/dask_cudf/pyproject.toml
+++ b/python/dask_cudf/pyproject.toml
@@ -48,6 +48,8 @@ cudf = "dask_cudf.backends:CudfBackendEntrypoint"
 [project.optional-dependencies]
 test = [
     "dask-cuda==25.8.*,>=0.0.0a0",
+    "numba-cuda>=0.14.0,<0.15.0a0",
+    "numba>=0.59.1,<0.62.0a0",
     "pytest",
     "pytest-cov",
     "pytest-xdist",
