--- a/python/cudf/pyproject.toml
+++ b/python/cudf/pyproject.toml
@@ -23,7 +23,7 @@ dependencies = [
     "cupy-cuda12x>=12.0.0",
     "fsspec>=0.6.0",
     "libcudf==25.8.*,>=0.0.0a0",
-    "numba-cuda[cu12]>=0.16.0,<0.17.0a0",
+    "numba-cuda[cu12]>=0.15.2,<0.16.0a0",
     "numba>=0.59.1,<0.62.0a0",
     "numpy>=1.23,<3.0a0",
     "nvtx>=0.2.1",
@@ -32,6 +32,7 @@ dependencies = [
     "pyarrow>=14.0.0,<20.0.0a0,!=17.0.0; platform_machine=='aarch64'",
     "pyarrow>=14.0.0,<20.0.0a0; platform_machine=='x86_64'",
     "pylibcudf==25.8.*,>=0.0.0a0",
+    "pynvjitlink>=0.0.0a0",
     "rich",
     "rmm==25.8.*,>=0.0.0a0",
     "typing_extensions>=4.0.0",
