--- a/conda/recipes/libcudf/recipe.yaml
+++ b/conda/recipes/libcudf/recipe.yaml
@@ -72,7 +72,7 @@ cache:
         then:
           - libcufile-dev
       - cuda-version =${{ cuda_version }}
-      - nvcomp ${{ nvcomp_version }}
+      - libnvcomp ${{ nvcomp_version }}
       - dlpack ${{ dlpack_version }}
       - librdkafka ${{ librdkafka_version }}
       - flatbuffers =${{ flatbuffers_version }}
@@ -106,7 +106,7 @@ outputs:
         - cuda-version =${{ cuda_version }}
         - libkvikio =${{ minor_version }}
         - librmm =${{ minor_version }}
-        - nvcomp ${{ nvcomp_version }}
+        - libnvcomp ${{ nvcomp_version }}
         - rapids-logger =0.1
         - zlib ${{ zlib_version }}
         - cuda-cudart-dev
@@ -116,7 +116,7 @@ outputs:
         - if: linux and x86_64
           then:
             - libcufile
-        - nvcomp ${{ nvcomp_version }}
+        - libnvcomp ${{ nvcomp_version }}
         - librmm =${{ minor_version }}
         - libkvikio =${{ minor_version }}
         - dlpack ${{ dlpack_version }}
@@ -136,7 +136,7 @@ outputs:
           - librdkafka
           - libzlib
           - librmm
-          - nvcomp
+          - libnvcomp
     tests:
       - script:
         - test -f $PREFIX/include/cudf/column/column.hpp
@@ -178,7 +178,7 @@ outputs:
           - librdkafka
           - librmm
           - libzlib
-          - nvcomp
+          - libnvcomp
     tests:
       - script:
         - test -f $PREFIX/lib/libcudf_kafka.so
@@ -247,7 +247,7 @@ outputs:
           - librdkafka
           - librmm
           - libzlib
-          - nvcomp
+          - libnvcomp
     about:
       homepage: ${{ load_from_file("python/libcudf/pyproject.toml").project.urls.Homepage }}
       license: ${{ load_from_file("python/libcudf/pyproject.toml").project.license.text }}
@@ -296,7 +296,7 @@ outputs:
           - librdkafka
           - librmm
           - libzlib
-          - nvcomp
+          - libnvcomp
     about:
       homepage: ${{ load_from_file("python/libcudf/pyproject.toml").project.urls.Homepage }}
       license: ${{ load_from_file("python/libcudf/pyproject.toml").project.license.text }}
